--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo</artifactId>
-            <version>1.10.0</version>
+            <version>1.10.1</version>
         </dependency>
 
         <dependency>
@@ -124,8 +124,8 @@
 
         <dependency>
             <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.ipojo.arch.gogo</artifactId>
-            <version>1.0.1</version>
+            <artifactId>org.apache.felix.ipojo.gogo</artifactId>
+            <version>1.10.1</version>
         </dependency>
 
         <dependency>
@@ -243,7 +243,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.8.1</version>
+                <version>2.9.1</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -347,37 +347,6 @@
                         <groupId>org.eclipse.mylyn.github</groupId>
                         <artifactId>org.eclipse.egit.github.core</artifactId>
                         <version>2.1.5</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <!-- Create the file to download -->
-                <groupId>com.github.github</groupId>
-                <artifactId>downloads-maven-plugin</artifactId>
-                <version>0.6</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>upload</goal>
-                        </goals>
-                        <phase>site-deploy</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <description>${project.version} version of ${project.name}</description>
-                    <override>true</override>
-                    <includeAttached>false</includeAttached>
-                    <includes>
-                        <include>${project.artifactId}*.zip</include>
-                        <include>${project.artifactId}*.jar</include>
-                    </includes>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.eclipse.mylyn.github</groupId>
-                        <artifactId>org.eclipse.egit.github.core</artifactId>
-                        <version>2.0.3</version>
                     </dependency>
                 </dependencies>
             </plugin>
