--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo</artifactId>
-            <version>1.10.1</version>
+            <version>1.11.0</version>
         </dependency>
 
         <dependency>
@@ -81,13 +81,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.6</version>
+            <version>1.7.2</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.0.9</version>
+            <version>1.0.11</version>
         </dependency>
 
         <dependency>
@@ -125,7 +125,7 @@
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.ipojo.gogo</artifactId>
-            <version>1.10.1</version>
+            <version>1.11.0</version>
         </dependency>
 
         <dependency>
@@ -148,25 +148,19 @@
         <dependency>
             <groupId>org.ow2.shelbie</groupId>
             <artifactId>shelbie-core</artifactId>
-            <version>2.0.0-M3</version>
+            <version>2.0.0-RC1</version>
         </dependency>
 
         <dependency>
-            <groupId>org.ow2.shelbie</groupId>
-            <artifactId>shelbie-commands-builtin</artifactId>
-            <version>2.0.0-M3</version>
+            <groupId>org.ow2.shelbie.commands</groupId>
+            <artifactId>shelbie-builtin-commands</artifactId>
+            <version>2.0.0-RC1</version>
         </dependency>
 
         <dependency>
             <groupId>org.ow2.shelbie.commands</groupId>
             <artifactId>shelbie-ipojo-commands</artifactId>
-            <version>2.0.0-M3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.ow2.shelbie.commands</groupId>
-            <artifactId>shelbie-ssh-commands</artifactId>
-            <version>2.0.0-M2</version>
+            <version>2.1</version>
         </dependency>
 
         <dependency>
@@ -183,7 +177,7 @@
         <dependency>
             <groupId>org.ow2.shelbie</groupId>
             <artifactId>shelbie-startup-console</artifactId>
-            <version>2.0.0-M3</version>
+            <version>2.0.0-RC1</version>
         </dependency>
     </dependencies>
     <build>
