--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
         <url>https://github.com/ow2-chameleon/core</url>
     </organization>
 
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/ow2-chameleon/core/issues</url>
+    </issueManagement>
+
     <properties>
         <site.path>snapshot</site.path>
         <!-- Site Title -->
@@ -455,5 +460,28 @@
             </build>
         </profile>
     </profiles>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <fixTags>true</fixTags>
+                    <show>private</show>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-changes-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <githubAPIScheme>https</githubAPIScheme>
+                    <githubAPIPort>443</githubAPIPort>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 
 </project>
