Add jansi as dependency to support log colors on windows
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.fusesource.jansi</groupId>
+            <artifactId>jansi</artifactId>
+            <version>1.11</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
