--- a/pom.xml
+++ b/pom.xml
@@ -353,7 +353,7 @@
 
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.0-beta-9</version>
+                <version>2.5</version>
                 <configuration>
                     <useReleaseProfile>true</useReleaseProfile>
                     <goals>deploy site-deploy</goals>
