--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <lastReleasedVersion>1.0.3</lastReleasedVersion>
         <nextReleaseVersion>1.0.4</nextReleaseVersion>
         <developmentVersion>${project.version}</developmentVersion>
+
+        <disableLint><!-- only used on jdk8 (see profile) --></disableLint>
     </properties>
 
     <licenses>
@@ -311,6 +313,8 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <applyJavadocSecurityFix>true</applyJavadocSecurityFix>
+                    <additionalparam>${disableLint}</additionalparam>
                     <defaultVersion>$Id: ${nextReleaseVersion} $Id</defaultVersion>
                     <defaultAuthor>The OW2 Chameleon Team</defaultAuthor>
                     <defaultSince>$Id: ${nextReleaseVersion} $Id</defaultSince>
@@ -472,6 +476,16 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <!-- JDK 8 is a bit picky on the javadoc, this profile disable the linter -->
+            <id>jdk8</id>
+            <activation>
+                <jdk>1.8</jdk>
+            </activation>
+            <properties>
+                <disableLint>-Xdoclint:none</disableLint>
+            </properties>
         </profile>
     </profiles>
 
