--- a/pom.xml
+++ b/pom.xml
@@ -496,8 +496,10 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
                 <configuration>
+                    <applyJavadocSecurityFix>true</applyJavadocSecurityFix>
                     <fixTags>true</fixTags>
                     <show>private</show>
+                    <additionalparam>${disableLint}</additionalparam>
                 </configuration>
             </plugin>
             <plugin>
