--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -12,7 +11,7 @@
     <groupId>org.ow2.chameleon</groupId>
     <artifactId>chameleon-core</artifactId>
     <name>OW2 Chameleon - Core</name>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4</version>
 
     <description>Chameleon Core is an easy way to build customized OSGi frameworks</description>
 
@@ -447,7 +446,8 @@
         <connection>scm:git:git@github.com:ow2-chameleon/core.git</connection>
         <url>https://github.com/ow2-chameleon/core</url>
         <developerConnection>scm:git:git@github.com:ow2-chameleon/core.git</developerConnection>
-    </scm>
+      <tag>chameleon-core-1.0.4</tag>
+  </scm>
 
     <profiles>
         <profile>
