--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <osgi.version>4.3.1</osgi.version>
         <lastReleasedVersion>1.0.6</lastReleasedVersion>
         <nextReleaseVersion>1.0.7</nextReleaseVersion>
-        <developmentVersion>1.0.7-SNAPSHOT</developmentVersion>
+        <nextDevelopmentVersion>1.0.7-SNAPSHOT</nextDevelopmentVersion>
 
         <disableLint><!-- only used on jdk8 (see profile) --></disableLint>
     </properties>
