Update version after the release.
Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,9 @@
         <title>OW2 Chameleon :: core</title>
         <ipojo.version>1.11.2</ipojo.version>
         <osgi.version>4.3.1</osgi.version>
-        <lastReleasedVersion>1.0.6</lastReleasedVersion>
-        <nextReleaseVersion>1.0.7</nextReleaseVersion>
-        <nextDevelopmentVersion>1.0.7-SNAPSHOT</nextDevelopmentVersion>
+        <lastReleasedVersion>1.0.7</lastReleasedVersion>
+        <nextReleaseVersion>1.0.8</nextReleaseVersion>
+        <nextDevelopmentVersion>1.0.8-SNAPSHOT</nextDevelopmentVersion>
 
         <disableLint><!-- only used on jdk8 (see profile) --></disableLint>
     </properties>
@@ -356,7 +356,7 @@
                 <version>2.5</version>
                 <configuration>
                     <useReleaseProfile>true</useReleaseProfile>
-                    <goals>deploy site-deploy</goals>
+                    <goals>deploy</goals>
                 </configuration>
             </plugin>
 
