--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,30 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.5.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>bundle</goal>
+                        </goals>
+                        <phase>
+                            package
+                        </phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <classifier>service</classifier>
+                    <instructions>
+                        <Bundle-Name>OW2 Chameleon Core - Service</Bundle-Name>
+                        <Export-Package>org.ow2.chameleon.core.services</Export-Package>
+                        <Private-Package>org.ow2.chameleon.core.services</Private-Package>
+                        <Import-Package>com.google.common*;version=14.0.0, *;resolution:=optional</Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.4</version>
                 <executions>
