--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <ipojo.version>1.12.1</ipojo.version>
         <osgi.version>4.3.1</osgi.version>
 
+        <!-- IMPORTANT: updating one of these two values requires updating `ChameleonConfiguration` -->
+        <logback.version>1.1.3</logback.version>
+        <slf4j.version>1.7.9</slf4j.version>
+
         <currentVersion>1.10.3</currentVersion>
         <devVersion>${project.version}</devVersion>
 
@@ -91,19 +95,19 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.9</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.1.3</version>
+            <version>${logback.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>org.easytesting</groupId>
-            <artifactId>fest-assert</artifactId>
-            <version>1.4</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>1.6.1</version>
             <scope>test</scope>
         </dependency>
 
