--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.ow2.chameleon</groupId>
     <artifactId>chameleon-core</artifactId>
     <name>OW2 Chameleon - Core</name>
-    <version>1.10.9</version>
+    <version>1.10.10-SNAPSHOT</version>
 
     <description>Chameleon Core is an easy way to build customized OSGi frameworks</description>
 
@@ -494,7 +494,7 @@
         <connection>scm:git:git@github.com:ow2-chameleon/core.git</connection>
         <url>https://github.com/ow2-chameleon/core</url>
         <developerConnection>scm:git:git@github.com:ow2-chameleon/core.git</developerConnection>
-      <tag>chameleon-core-1.10.9</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <profiles>
